<resources>
    <string name="app_name">Noted</string>
    <string name="sort_by">Sort by</string>
    <string name="add_new_note">Add new note</string>
    <string name="save">save</string>
    <string name="your_notes">Your notes</string>
    <string name="change_note">Change note</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="title">Tittle</string>
    <string name="update">Update</string>
    <string name="done">Done</string>

    <string name="example_tittle">Жизнь без любви – это все равно, что сказка без счастливого конца. По-настоящему человек может быть счастлив только тогда, когда ему есть, кого любить и о ком заботиться.
Любовь может быть с первого взгляда, когда для того, чтобы понять, что судьба подарила встречу со второй половинкой, достаточно только улыбки. А может, наоборот, долго созревать, как пшеничное зернышко.
Иногда для того, чтобы люди поняли, что не могут жить друг без друга, нужны годы.
Но если любовь настоящая, то ей не страшны ни время, ни расстояния, она способна выдержать все испытания и преодолеть все преграды на своем пути к хэппи энду.
Любовь не терпит грубости, измен, безразличия. Это то светлое чувство, которое окутано романтикой. Для того чтобы любить и быть любимым, нужно отдать частичку себя, уметь пойти навстречу и найти компромисс. О своих чувствах нужно уметь рассказать, и не только словами, но и поступками. Доказательство любви – это не только нежные признания, но и романтические, а порой даже безумные поступки.
Романтические отношения напоминают дуэт двух сердец, которые стучат в унисон. Любящие друг друга люди разделяют все жизненные победы и препятствия на двоих. Любовь – это и романтический ужин при свечах, и совместный прыжок с парашюта, это то одно чувство, которое делиться на двоих. Для влюбленных нет слова «Я», для них есть только местоимение «МЫ»…</string>
    <string name="recently_added">Recently added</string>
    <string name="long_added">Long added</string>
    <string name="delete_all">Delete_all</string>
    <string name="requst_to_delete">Do you want to delete all the notes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>