<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <group>
        <item
            android:id="@+id/action_sort"
            android:title="@string/sort_by"
            android:icon="@drawable/ic_sort"
            app:showAsAction="always">

            <menu>
                <item
                    android:id="@+id/action_sort_first_new"
                    android:title="@string/recently_added" />

                <item
                    android:id="@+id/action_sort_first_old"
                    android:title="@string/long_added" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_trash"
        app:showAsAction="always" />

</menu>